crates/schema/tests/snapshots/evolution_wire_snapshot__field_value_mode_wire_format.snap
---
source: crates/schema/tests/evolution_wire_snapshot.rs
expression: mode
---
{
  "version": 2,
  "data": {
    "mode": "oauth2",
    "value": {
      "scope": "read"
    }
  },
  "expressions": []
}
