crates/schema/tests/snapshots/evolution_wire_snapshot__field_values_wire_format.snap
---
source: crates/schema/tests/evolution_wire_snapshot.rs
expression: values
---
{
  "version": 2,
  "data": {
    "expr": null,
    "flag": true,
    "list": [
      1,
      2,
      3
    ],
    "mode": {
      "mode": "oauth2",
      "value": {
        "scope": "read"
      }
    },
    "nested": {
      "k": "v"
    },
    "scalar": 1,
    "text": "hello"
  },
  "expressions": [
    {
      "path": "/expr",
      "syntax": "auto",
      "source": "{{ $x.y }}"
    }
  ]
}
