crates/schema/tests/snapshots/evolution_wire_snapshot__unknown_field_type_preserved.snap
---
source: crates/schema/tests/evolution_wire_snapshot.rs
expression: field
---
{
  "key": "bio",
  "label": "Biography",
  "toolbar": [
    "bold",
    "italic"
  ],
  "type": "richtext",
  "visible": {
    "kind": "never"
  }
}
